Revise CSS styles to address header/body alignment issues
Also make nihilo match dojox grid nihilo style a bit more

--- a/css/skins/slate.css
+++ b/css/skins/slate.css
@@ -1,5 +1,4 @@
-.slate .ui-widget-content { 
-	border: 1px solid #666; 
+.slate .ui-widget-content {
 	background: #FFF; 
 	color: #000;
 	text-shadow: 0 1px 0 rgba(255,255,255,.9);
