--- a/css/skins/soria.css
+++ b/css/skins/soria.css
@@ -1,5 +1,4 @@
 .soria .ui-widget-content {
-	border: 1px solid #aaa;
 	background: #fff;
 	color: #000;
 }
